@@ -1,65 +1,78 @@
-<!--/////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-<!--                                                                                                                 -->
-<!--  © 2011-2021 Telenav, Inc.                                                                                      -->
-<!--  Licensed under Apache License, Version 2.0                                                                     -->
-<!--                                                                                                                 -->
-<!--/////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ /////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+ //
+ // © 2011-2022 Telenav, Inc.
+ // Licensed under Apache License, Version 2.0
+ //
+ /////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+ -->
 
-<project xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance" xmlns = "http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
+    
     <parent>
         <groupId>com.telenav.kivakit</groupId>
-        <artifactId>kivakit-hdfs-filesystem</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <artifactId>telenav-superpom-kivakit</artifactId>
+        <version>2.0.0</version>
+        <relativePath/>
     </parent>
-
+    
     <artifactId>kivakit-filesystems-hdfs</artifactId>
-    <packaging>jar</packaging>
+    <version>1.6.0</version>
 
     <dependencies>
-
+        
         <!-- KivaKit -->
-
+        
         <dependency>
-            <groupId>com.telenav.kivakit</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>kivakit-service-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.telenav.kivakit</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>kivakit-filesystems-hdfs-proxy-spi</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>kivakit-test</artifactId>
+            <artifactId>kivakit-testing</artifactId>
             
             <!-- PENDING: Something is leaking a direct dependency on this.
-                 What?? -->
-            <!--<scope>test</scope>-->
+             What?? -->
+            <!-- <scope>test</scope> -->
+            
         </dependency>
     </dependencies>
-
+    
     <build>
         <plugins>
+            
             <plugin>
+                
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version>
                 <configuration>
                     <excludedGroups>${exclude.test.groups}</excludedGroups>
+                    
                     <systemPropertyVariables>
                         <testQuick>${testQuick}</testQuick>
                     </systemPropertyVariables>
                     <argLine>
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-                        --add-opens org.apiguardian.api/org.apiguardian.api=ALL-UNNAMED
                         -Xmx2g
                     </argLine>
                 </configuration>
+                
             </plugin>
+            
         </plugins>
+        
     </build>
-
+    
 </project>
